:memo: Modify contents and fix some minor issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta name="title" content="Barcelona zkDay">
+	<meta name="title" content="Barcelona Succinct zkDay">
 	<meta name="description" content="" />
 	<meta charset="utf-8">
 	<title>Barcelona zkDay 2024</title>
@@ -12,7 +12,6 @@
 
 
 	<link rel="stylesheet" href="https://latex.now.sh/style.min.css" />
-	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<style>
 		table,
@@ -43,26 +42,11 @@
 	<div id="dark-mode-toggle" style="float:right!important;font-size:150%;cursor:pointer;">☾</div>
 	<br><br>
 
-	<h1 style="text-align: center;">zkDay Barcelona - April 22$^\text{nd}$, 2024</h1>
+	<h1 style="text-align: center;">Succinct zkDay Barcelona - April 22$^\text{nd}$, 2024</h1>
 
-	<!-- <div class="abstract">
-			<h2>Abstract</h2>
-			<p>
-			A aqui va la descripcio de l'evento en angles. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			<br>Date: 2024-04-22
-			</p>
-		</div> -->
-
-	<h2>Description</h2>
-	<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-	aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-	<br>
-	Test $LaTeX$ math mode inline test: $f(x) = \sum_{i=0}^n \alpha_i \cdot x^i$
-	<br>
-	And $LaTeX$ non-inline:
-	$$f \left( \sum_{i=0}^k a_i L_i(X) \right) = \sum_{i=0}^k f(a_i) L_i(X) + Z(X) Q(X)$$ -->
-
-	zkDay Barcelona aims to be a full day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
+	<div class="abstract">
+		zkDay Barcelona aims to be a full day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
+	</div>
 
 	<h2>Event topics</h2>
 		<ul>
@@ -72,8 +56,6 @@
 			<li>Folding Schemas</li>
 		</ul>
 	
-
-	<h2>Speakers</h2>
 
 	<h2>Schedule</h2>
 	<div class="table-container">
@@ -87,150 +69,79 @@
 				<th>Description</th>
 			</tr>
 			<tr style="border-top: 2px solid black;">
-				<td style="text-align: center;">10.00h</td>
+				<td style="text-align: center;">14.00h</td>
 				<td style="text-align: center;" colspan="3">Doors open</td>
 			</tr>
 			<tr style="border-bottom: 3px double black;">
-				<td style="text-align: center;">10.45h</td>
+				<td style="text-align: center;">14.45h</td>
 				<td style="text-align: center;" colspan="3"><b>Welcome to Barcelona zkDay 2024</b></td>
 			</tr>
+
 			<tr>
-				<td>11.00h - 11.30h</td>
+				<td>15.00h - 15.30h</td>
 				<td>Presentation 1 title</td>
 				<td>Speaker Name 1</td>
 				<td>Brief description 1</td>
 			</tr>
 			<tr>
-				<td>11.30h - 12.00h</td>
+				<td>15.30h - 16.00h</td>
 				<td>Presentation 2 title</td>
 				<td>Speaker Name 2</td>
 				<td>Brief description 2</td>
 			</tr>
 			<tr class="break-row">
-				<td>12.00h - 12.15h</td>
-				<td colspan="4">Break (15 minutes)</td>
+				<td>16.00h - 16.10h</td>
+				<td colspan="3">Break (10 minutes)</td>
 			</tr>
 			<tr>
-				<td>12.15h - 12.45h</td>
+				<td>16.10h - 16.40h</td>
 				<td>Presentation 3 title</td>
 				<td>Speaker Name 3</td>
 				<td>Brief description 3</td>
 			</tr>
 			<tr>
-				<td>12.45h - 13.15h</td>
+				<td>16.40h - 17.10h</td>
 				<td>Presentation 4 title</td>
 				<td>Speaker Name 4</td>
 				<td>Brief description 4</td>
 			</tr>
 			<tr class="break-row">
-				<td>13.15h - 15.15h</td>
-				<td colspan="3">Lunch break (2 hours)</td>
+				<td>17.10h - 17.20h</td>
+				<td colspan="3">Break (10 minutes)</td>
 			</tr>
 			<tr>
-				<td>15.15h - 15.45h</td>
+				<td>17.20h - 17.50h</td>
 				<td>Presentation 5 title</td>
 				<td>Speaker Name 5</td>
 				<td>Brief description 5</td>
 			</tr>
 			<tr>
-				<td>15.45h - 16.15h</td>
+				<td>17.50h - 18.20h</td>
 				<td>Presentation 6 title</td>
 				<td>Speaker Name 6</td>
 				<td>Brief description 6</td>
 			</tr>
-			<tr class="break-row">
-				<td>16.15h - 16.30h</td>
-				<td colspan="3">Break (15 minutes)</td>
-			</tr>
-			<tr>
-				<td>16.30h - 17.00h</td>
-				<td>Presentation 7 title</td>
-				<td>Speaker Name 7</td>
-				<td>Brief description 7</td>
-			</tr>
-			<tr>
-				<td>17.00h - 17.30h</td>
-				<td>Presentation 8 title</td>
-				<td>Speaker Name 8</td>
-				<td>Brief description 8</td>
-			</tr>
-			<tr class="break-row">
-				<td>17.30h - 17.45h</td>
-				<td colspan="3">Break (15 minutes)</td>
-			</tr>
-			<tr>
-				<td>17.45h - 18.15h</td>
-				<td>Presentation 9 title</td>
-				<td>Speaker Name 9</td>
-				<td>Brief description 9</td>
-			</tr>
-			<tr>
-				<td>18.15h - 18.45h</td>
-				<td>Presentation 10 title</td>
-				<td>Speaker Name 10</td>
-				<td>Brief description 10</td>
+			<tr class="break-row" style="border-bottom: 2px solid black;">
+				<td>18.20h - 21.00h</td>
+				<td colspan="3">Closing remarks and drinks</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
-				<td>18.45h - 21.00h</td>
-				<td colspan="3">Closing remarks and drinks</td>
+				<td>21.00h</td>
+				<td colspan="3">Dinner at restaurant</td>
 			</tr>
 		</table>
 	</div>
 
-	<!-- <ul style="list-style-type: none;">
-			<li>10.00h: Doors open</li>
-			<li>10.45h: <b>Welcome to Barcelona zkDay</b></li>
-			<li>11.00h: <b>Presentation 1 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>11.30h: <b>Presentation 2 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>12.00h: <b>Presentation 3 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>12.30h: <b>Presentation 4 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>13.00h: Lunch break</li>
-			<li>15.00h: <b>Presentation 5 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>15.30h: <b>Presentation 6 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>16.00h: <b>Presentation 7 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>16.30h: <b>Presentation 8 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>17.00h: <b>Presentation 9 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>17.30h: <b>Presentation 10 title</b> - Speaker Name
-				<br>Brief description
-			</li>
-			<li>18.00h: <b>Closing remarks and drinks</b>
-			</li>
-		</ul> -->
 
 
 	<h2>Venue</h2>
 		The venue for this event is the Akasha Hub Barcelona, located at Verneda Street number 19, Warehouse 1, 08018 Barcelona (Spain).
 
 	<!-- the following embedded map has an extra CSS filter to remove colors to make it more aligned with the web style -->
-	<iframe style="margin: 0 auto;"
+	<iframe style="margin: 0 auto; filter: grayscale(100%);"
 		src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.3022701439163!2d2.1886275770768973!3d41.41095667129679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a3a3517f041d%3A0x6297055e3d4f368!2sAkasha%20Hub%20Barcelona!5e0!3m2!1ses!2ses!4v1707412579202!5m2!1ses!2ses"
 		width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"
 		referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-	<h2>Tickets</h2>
-	<ul>
-		<il>Normal ticket: 15€</il>
-		<il>Student ticket: 10€</il>
-	</ul>
-	<a href="https://lu.ma/barcelona-zkday">https://lu.ma/barcelona-zkday</a>
 
 	<h2>Sponsors</h2>
 
