--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<h1 style="text-align: center;">Succinct zkDay Barcelona - April 22$^\text{nd}$, 2024</h1>
 
 	<div class="abstract">
+	<h2>Abstract</h2>
 		zkDay Barcelona aims to be a full day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
 	</div>
 
