--- a/index.html
+++ b/index.html
@@ -42,26 +42,23 @@
 	<div id="dark-mode-toggle" style="float:right!important;font-size:150%;cursor:pointer;">☾</div>
 	<br><br>
 
-	<h1 style="text-align: center;">Succinct zkDay Barcelona - April 22$^\text{nd}$, 2024</h1>
+	<h1 style="text-align: center;"><span style="font-size:70%;">(succinct)</span> zkDay Barcelona <span style="font-size:70%;">- April 22$^\text{nd}$, 2024</span></h1>
 
 	<div class="abstract">
 	<h2>Abstract</h2>
-		zkDay Barcelona aims to be a full day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
+		zkDay Barcelona aims to be a day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
 	</div>
 
-	<h2>Event topics</h2>
-		<ul>
-			<li>Zero-Knowledge Cryptography</li>
-			<li>Proving Systems</li>
-			<li>Probabilistic Proof Systems</li>
-			<li>Folding Schemas</li>
-		</ul>
+	<!-- <h2>Event topics</h2> -->
+	<!--         <ul> -->
+	<!--                 <li>Zero-Knowledge Cryptography</li> -->
+	<!--                 <li>Proving Systems</li> -->
+	<!--                 <li>Probabilistic Proof Systems</li> -->
+	<!--                 <li>Folding Schemas</li> -->
+	<!--         </ul> -->
 	
-
-	<h2>Schedule</h2>
+	<h2>Schedule (to be defined)</h2>
 	<div class="table-container">
-
-
 		<table style="text-align: center;">
 			<tr>
 				<th>Time</th>
@@ -80,15 +77,15 @@
 
 			<tr>
 				<td>15.00h - 15.30h</td>
-				<td>Presentation 1 title</td>
-				<td>Speaker Name 1</td>
-				<td>Brief description 1</td>
+				<td><!--Presentation 1 title--></td>
+				<td><!--Speaker Name 1--></td>
+				<td><!--Brief description 1--></td>
 			</tr>
 			<tr>
 				<td>15.30h - 16.00h</td>
-				<td>Presentation 2 title</td>
-				<td>Speaker Name 2</td>
-				<td>Brief description 2</td>
+				<td><!--Presentation 2 title--></td>
+				<td><!--Speaker Name 2--></td>
+				<td><!--Brief description 2--></td>
 			</tr>
 			<tr class="break-row">
 				<td>16.00h - 16.10h</td>
@@ -96,15 +93,15 @@
 			</tr>
 			<tr>
 				<td>16.10h - 16.40h</td>
-				<td>Presentation 3 title</td>
-				<td>Speaker Name 3</td>
-				<td>Brief description 3</td>
+				<td><!--Presentation 3 title--></td>
+				<td><!--Speaker Name 3--></td>
+				<td><!--Brief description 3--></td>
 			</tr>
 			<tr>
 				<td>16.40h - 17.10h</td>
-				<td>Presentation 4 title</td>
-				<td>Speaker Name 4</td>
-				<td>Brief description 4</td>
+				<td><!--Presentation 4 title--></td>
+				<td><!--Speaker Name 4--></td>
+				<td><!--Brief description 4--></td>
 			</tr>
 			<tr class="break-row">
 				<td>17.10h - 17.20h</td>
@@ -112,15 +109,15 @@
 			</tr>
 			<tr>
 				<td>17.20h - 17.50h</td>
-				<td>Presentation 5 title</td>
-				<td>Speaker Name 5</td>
-				<td>Brief description 5</td>
+				<td><!--Presentation 5 title--></td>
+				<td><!--Speaker Name 5--></td>
+				<td><!--Brief description 5--></td>
 			</tr>
 			<tr>
 				<td>17.50h - 18.20h</td>
-				<td>Presentation 6 title</td>
-				<td>Speaker Name 6</td>
-				<td>Brief description 6</td>
+				<td><!--Presentation 6 title--></td>
+				<td><!--Speaker Name 6--></td>
+				<td><!--Brief description 6--></td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
 				<td>18.20h - 21.00h</td>
@@ -133,6 +130,20 @@
 		</table>
 	</div>
 
+
+	<h2>Speakers</h2>
+	<a target="_blank" href="https://hecmas.github.io/">
+		Héctor Masip Ardevol</a>, Polygon<br>
+	<a target="_blank" href="https://0xadriatorralba.github.io/">
+		Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br>
+	<a target="_blank" href="https://github.com/ed255">
+		Eduard</a>, PSE<br>
+	<a target="_blank" href="URL">
+		Javi</a>, Dusk Network<br>
+	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088433800">
+		Marta Bellés-Muñoz</a>, Dusk Network<br>
+	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088234218">
+		Jose Luis Muñoz-Tapia</a>, UPC (Polytechnic University of Catalonia)<br>
 
 
 	<h2>Venue</h2>
