--- a/index.html
+++ b/index.html
@@ -49,13 +49,23 @@
 		zkDay Barcelona aims to be a day dedicated to zero-knowledge cryptography and its applications. The event will feature a series of talks by leading experts in the field, covering a wide range of topics from the theoretical foundations of zero-knowledge proofs to the latest developments in the area. The event will also provide an opportunity for networking and collaboration among researchers and practitioners working on zero-knowledge cryptography.
 	</div>
 
-	<!-- <h2>Event topics</h2> -->
-	<!--         <ul> -->
-	<!--                 <li>Zero-Knowledge Cryptography</li> -->
-	<!--                 <li>Proving Systems</li> -->
-	<!--                 <li>Probabilistic Proof Systems</li> -->
-	<!--                 <li>Folding Schemas</li> -->
-	<!--         </ul> -->
+	<h2>Speakers</h2>
+
+	<a target="_blank" href="https://twitter.com/jbaylina">
+		Jordi Baylina</a>, Polygon zkEVM<br>
+	<a target="_blank" href="https://hecmas.github.io/">
+		Héctor Masip Ardevol</a>, Polygon zkEVM & UPC (Polytechnic University of Catalonia)<br>
+	<a target="_blank" href="https://0xadriatorralba.github.io/">
+		Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br>
+	<a target="_blank" href="https://github.com/ed255">
+		Eduard</a>, PSE zkEVM<br>
+	<a target="_blank" href="URL">
+		Javi</a>, Dusk Network<br>
+	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088433800">
+		Marta Bellés-Muñoz</a>, Dusk Network<br>
+	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088234218">
+		Jose Luis Muñoz-Tapia</a>, UPC (Polytechnic University of Catalonia)<br>
+
 	
 	<h2>Schedule (to be defined)</h2>
 	<div class="table-container">
@@ -78,13 +88,13 @@
 			<tr>
 				<td>15.00h - 15.30h</td>
 				<td><!--Presentation 1 title--></td>
-				<td><!--Speaker Name 1--></td>
+				<td>TBD<!--Speaker Name 1--></td>
 				<td><!--Brief description 1--></td>
 			</tr>
 			<tr>
 				<td>15.30h - 16.00h</td>
 				<td><!--Presentation 2 title--></td>
-				<td><!--Speaker Name 2--></td>
+				<td>TBD<!--Speaker Name 2--></td>
 				<td><!--Brief description 2--></td>
 			</tr>
 			<tr class="break-row">
@@ -94,13 +104,13 @@
 			<tr>
 				<td>16.10h - 16.40h</td>
 				<td><!--Presentation 3 title--></td>
-				<td><!--Speaker Name 3--></td>
+				<td>TBD<!--Speaker Name 3--></td>
 				<td><!--Brief description 3--></td>
 			</tr>
 			<tr>
 				<td>16.40h - 17.10h</td>
 				<td><!--Presentation 4 title--></td>
-				<td><!--Speaker Name 4--></td>
+				<td>TBD<!--Speaker Name 4--></td>
 				<td><!--Brief description 4--></td>
 			</tr>
 			<tr class="break-row">
@@ -110,13 +120,13 @@
 			<tr>
 				<td>17.20h - 17.50h</td>
 				<td><!--Presentation 5 title--></td>
-				<td><!--Speaker Name 5--></td>
+				<td>TBD<!--Speaker Name 5--></td>
 				<td><!--Brief description 5--></td>
 			</tr>
 			<tr>
 				<td>17.50h - 18.20h</td>
 				<td><!--Presentation 6 title--></td>
-				<td><!--Speaker Name 6--></td>
+				<td>TBD<!--Speaker Name 6--></td>
 				<td><!--Brief description 6--></td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
@@ -131,23 +141,10 @@
 	</div>
 
 
-	<h2>Speakers</h2>
-	<a target="_blank" href="https://hecmas.github.io/">
-		Héctor Masip Ardevol</a>, Polygon<br>
-	<a target="_blank" href="https://0xadriatorralba.github.io/">
-		Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br>
-	<a target="_blank" href="https://github.com/ed255">
-		Eduard</a>, PSE<br>
-	<a target="_blank" href="URL">
-		Javi</a>, Dusk Network<br>
-	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088433800">
-		Marta Bellés-Muñoz</a>, Dusk Network<br>
-	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088234218">
-		Jose Luis Muñoz-Tapia</a>, UPC (Polytechnic University of Catalonia)<br>
-
 
 	<h2>Venue</h2>
-		The venue for this event is the Akasha Hub Barcelona, located at Verneda Street number 19, Warehouse 1, 08018 Barcelona (Spain).
+	The venue for this event is the Akasha Hub Barcelona, located at<br>
+		Verneda Street, number 19, Warehouse 1, 08018 Barcelona (Spain).
 
 	<!-- the following embedded map has an extra CSS filter to remove colors to make it more aligned with the web style -->
 	<iframe style="margin: 0 auto; filter: grayscale(100%);"
