feat: use logo for favicon with light/dark support, png as fallback

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<title>Barcelona zkDay 2024</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link href="zkcat13.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: light)"/>
+	<link href="zkcat13d.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: dark)"/>
+	<link href="zkcat13.png" rel="icon" type="image/png" media="(prefers-color-scheme: light)"/>
+	<link href="zkcat13d.png" rel="icon" type="image/png" media="(prefers-color-scheme: dark)"/>
 
 
 	<link rel="stylesheet" href="https://latex.now.sh/style.min.css" />
