--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 	<h2>Registration</h2>
 	Registration is free. Please confirm your assistance at <a
-		href="https://lu.ma/zkDayBarcelona">https://lu.ma/zkDayBarcelona</a><label for="sn-1"
+		href="https://lu.ma/zkDayBarcelona" target="_blank">https://lu.ma/zkDayBarcelona</a><label for="sn-1"
 		class="sidenote-toggle sidenote-number"></label>
 	<input type="checkbox" id="sn-1" class="sidenote-toggle" />
 	<span class="sidenote">Name and email are mandatory, but you can use pseoudonyms and/or a fake email.</span>
