--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			</div>
 			<div>
 				Website hosted on
-				<a href="https://github.com/zkbarcelona/barcelona-zkday-web" style="text-decoration: none;">Github</a>
+				<a href="https://github.com/zkbarcelona/barcelona-zkday-web" style="text-decoration: none;" target="_blank">Github</a>
 			</div>
 		</div>
 	</footer>
