--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					</a>
 				</span>
 				<span>
-					<a href="https://www.github.com/zkBarcelona" style="text-decoration: none;">
+					<a href="https://www.github.com/zkBarcelona" style="text-decoration: none;" target="_blank">
 						<i class="fab fa-github"></i>
 					</a>
 				</span>
