--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			</div>
 			<div>
 				<span>
-					<a href="https://www.twitter.com/zkBarcelona" style="text-decoration: none;">
+					<a href="https://www.twitter.com/zkBarcelona" style="text-decoration: none;" target="_blank">
 						<i class="fab fa-twitter"></i>
 					</a>
 				</span>
