--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
 	<h2>Venue</h2>
-	The venue for this event is the <b>Akasha Hub Barcelona.</b><br>
+	The venue for this event is the <b><a href="https://akasha.barcelona" target="_blank">Akasha Hub Barcelona.</a></b><br>
 
 	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
