update email sentence

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		href="https://lu.ma/zkDayBarcelona" target="_blank">https://lu.ma/zkDayBarcelona</a><label for="sn-1"
 		class="sidenote-toggle sidenote-number"></label>
 	<input type="checkbox" id="sn-1" class="sidenote-toggle" />
-	<span class="sidenote">Name and email are mandatory, but you can use pseoudonyms and/or a fake email.</span>
+	<span class="sidenote">Name and email are mandatory, you can use pseoudonyms, but we will use the email to communicate updates of the event.</span>
 
 
 
