Add PLONK Selectors equation

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
 		     "\\Psi_j(X, Y) =\\sum_{i=1}^n \\psi_{j, \\sigma_{j, i}} \\cdot X^i \\cdot Y^{\\sigma_{j, i}}", // Sonic
 		     "\\widetilde{F}_{io}(x)=\\left( \\sum_{y \\in \\{0,1\\}^s} \\widetilde{A}(x, y) \\cdot \\widetilde{Z}(y) \\right) \\cdot \\left( \\sum_{y \\in \\{0,1\\}^s} \\widetilde{B}(x, y) \\cdot \\widetilde{Z}(y) \\right) - \\sum_{y \\in \\{0,1\\}^s} \\widetilde{C}(x, y) \\cdot \\widetilde{Z}(y)", // Spartan
 		      "e_n(P, Q) = \\frac{f_P(Q+T)}{f_P(T)} / \\frac{f_Q(P+S)}{f_Q(S)}", // Weil pairing
+			  "(q_{L})_i \\cdot x_{a_i} + (q_{R})_i \\cdot x_{b_i} + (q_{O})_i \\cdot x_{c_i} + (q_{M})_i \\cdot (x_{a_i} x_{b_i}) + (q_{C})_i = 0", // PLONK Selectors
 		    ];
 	  let katexConfig = {
 		      delimiters: [
