update Javier info

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 		Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br>
 	<a target="_blank" href="https://github.com/ed255">
 		Eduard</a>, PSE zkEVM<br>
-	<a target="_blank" href="URL">
-		Javi</a>, Dusk Network<br>
+	<a target="_blank" href="https://www.linkedin.com/in/javier-silva-800486270/">
+		Javier Silva</a>, =nil; Foundation<br>
 	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088433800">
 		Marta Bellés-Muñoz</a>, Dusk Network<br>
 	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088234218">
