--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
 		Eduard</a>, PSE zkEVM<br>
 	<a target="_blank" href="https://www.linkedin.com/in/javier-silva-800486270/">
 		Javier Silva</a>, =nil; Foundation<br>
-	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088433800">
-		Marta Bellés-Muñoz</a>, Dusk Network<br>
-	<a target="_blank" href="https://ieeexplore.ieee.org/author/37088234218">
-		Jose Luis Muñoz-Tapia</a>, UPC (Polytechnic University of Catalonia)<br>
+	<a target="_blank" href="https://twitter.com/therealyingtong">
+		Ying Tong</a><br>
 
 
 	<h2>Schedule (to be defined)</h2>
+	
+	WIP: order is not definitive, we're just filling the titles and descriptions for the moment.
+
 	<div class="table-container">
 		<table style="text-align: center;">
 			<tr>
@@ -100,6 +101,7 @@
 				<th>Title</th>
 				<th>Speaker</th>
 				<th>Description</th>
+				<!-- <th>Recommended read before the talk</th> -->
 			</tr>
 			<tr style="border-top: 2px solid black;">
 				<td style="text-align: center;">14.00h</td>
@@ -112,14 +114,14 @@
 
 			<tr>
 				<td>15.00h - 15.30h</td>
-				<td><!--Presentation 1 title--></td>
-				<td>TBD<!--Speaker Name 1--></td>
-				<td><!--Brief description 1--></td>
+				<td>Review of RISCV zkVMs</td>
+				<td>Eduard</td>
+				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution</td>
 			</tr>
 			<tr>
 				<td>15.30h - 16.00h</td>
-				<td><!--Presentation 2 title--></td>
-				<td>TBD<!--Speaker Name 2--></td>
+				<td>How to get pairings in a zkEVM</td>
+				<td>Héctor Masip Ardevol</td>
 				<td><!--Brief description 2--></td>
 			</tr>
 			<tr class="break-row">
