Added ying tong

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 			</tr>
 			<tr>
 				<td>16.10h - 16.40h</td>
-				<td><!--Presentation 3 title--></td>
-				<td>TBD<!--Speaker Name 3--></td>
+				<td>privacy in defi</td>
+				<td>Ying tong</td>
 				<td><!--Brief description 3--></td>
 			</tr>
 			<tr>
