Allocate all speakers

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 
 			<tr>
 				<td>15.00h - 15.30h</td>
-				<td>Review of RISCV zkVMs</td>
-				<td>Eduard</td>
-				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution</td>
+				<td>Recursion in zk(E)VMs</td>
+				<td>Jordi Baylina</td>
+				<td></td>
 			</tr>
 			<tr>
 				<td>15.30h - 16.00h</td>
@@ -130,14 +130,14 @@
 			</tr>
 			<tr>
 				<td>16.10h - 16.40h</td>
-				<td>privacy in defi</td>
+				<td>Privacy in DeFI</td>
 				<td>Ying tong</td>
 				<td><!--Brief description 3--></td>
 			</tr>
 			<tr>
 				<td>16.40h - 17.10h</td>
 				<td><!--Presentation 4 title--></td>
-				<td>TBD<!--Speaker Name 4--></td>
+				<td>Adrià Torralba</td>
 				<td><!--Brief description 4--></td>
 			</tr>
 			<tr class="break-row">
@@ -146,14 +146,14 @@
 			</tr>
 			<tr>
 				<td>17.20h - 17.50h</td>
-				<td><!--Presentation 5 title--></td>
-				<td>TBD<!--Speaker Name 5--></td>
-				<td><!--Brief description 5--></td>
+				<td>Review of RISCV zkVMs</td>
+				<td>Eduard</td>
+				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution</td>
 			</tr>
 			<tr>
 				<td>17.50h - 18.20h</td>
-				<td><!--Presentation 6 title--></td>
-				<td>TBD<!--Speaker Name 6--></td>
+				<td>Quantifying Security</td>
+				<td>Javier Silva</td>
 				<td><!--Brief description 6--></td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
